[Add]会員側、情報確認画面の大枠の作成(後程、細かい修正を加えて完成)

--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,1 +1,77 @@
-<h1>ここは注文情報確認画面</h1>
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 my-3 justify-content-center">
+        <h4>注文情報確認</h4>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-8 jstifuy-content-center">
+        <table width="90%">
+          <thead>
+            <th class="border"  width="40%">商品名</th>
+            <th class="border"  width="20%">単価(税込)</th>
+            <th class="border"  width="20%">数量</th>
+            <th class="border"  width="20%">小計</th>
+          </thead>
+          <tbody>
+            <% @cart_items.each do |cart_item| %>
+              <tr>
+                <td class="border"  width="40%">
+                  <%= cart_item.item.name %>
+                </td>
+                <td class="border"  width="20%">
+                  <%= cart_item.item.add_tax_price %>
+                </td>
+                <td class="border"  width="20%">
+                  <%= cart_item.amount%>
+                </td>
+                <td class="border"  width="20%">
+                  <%= cart_item.subtotal%>
+                  <% @total+= cart_item.subtotal %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+      <div class="col-lg-3">
+        <table>
+          <tr>
+            <th class="border" width="40%">送料</th>
+            <td class="border" width="40%">800</td>
+          </tr>
+          <tr>
+            <th class="border" width="40%">商品合計</th>
+            <td class="border" width="40%"><%= @total %></td>
+          </tr>
+          <tr>
+            <th class="border" width="40%">請求金額</th>
+            <td class="border" width="40%"><%= @total+@postage %></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+
+    <div class="row my-3">
+      <div class="col-lg-2">
+        <strong>支払い方法</strong>
+      </div>
+      <div class="col-lg-2">
+        <%= @order_history %>
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="col-lg-2">
+        <strong>お届け先</strong>
+      </div>
+      <div class="col-lg-8">
+        <p>〒<%= @customer.postal_code %> <%= @customer.address %></br>
+        <%= @customer.last_name %><%= @customer.first_name %><p>
+      </div>
+    </div>
+
+  </div>
+</main>
