--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -9,13 +9,13 @@
     <div class="row">
       <strong>支払い方法</strong>
     </div>
-    <%= form_with model: @order_history, url: public_orders_confirm_path do |f| %>
+    <%= form_with model: @order_history, url: public_orders_confirm_path, method: :post  do |f| %>
     <div class="row">
-      <%= f.radio_button :payment_method, "credit_card", checked: true %>
+      <%= f.radio_button :method_of_payment, "credit_card", checked: true %>
       <%= f.label :payment_method_credit_card, "クレジットカード" %>
     </div>
     <div class="row">
-      <%= f.radio_button :payment_method, "transfer" %>
+      <%= f.radio_button :method_of_payment, "transfer" %>
       <%= f.label :payment_method_transfer, "銀行振込" %>
     </div>
 
