[Fix]ordersコントローラーの名前を、order_historiesに修正（統一目的）、情報確認画面の支払い方法の部分を日本語で表示できるよう修正

--- a/app/views/public/order_histories/confirm.html.erb
+++ b/app/views/public/order_histories/confirm.html.erb
@@ -59,10 +59,10 @@
         <strong>支払い方法</strong>
       </div>
       <div class="col-lg-2">
-        <%= @order_history %>
+        <%= @order_history.method_of_payment_i18n %>
       </div>
     </div>
-    
+
     <div class="row">
       <div class="col-lg-2">
         <strong>お届け先</strong>
