--- a/app/views/public/order_histories/new.html.erb
+++ b/app/views/public/order_histories/new.html.erb
@@ -9,14 +9,14 @@
     <div class="row">
       <strong>支払い方法</strong>
     </div>
-    <%= form_with model: @order_history, url: public_orders_confirm_path, method: :post  do |f| %>
+    <%= form_with model: @order_history, url: public_order_histories_confirm_path, method: :post  do |f| %>
     <div class="row">
-      <%= f.radio_button :method_of_payment, "credit_card", checked: true %>
-      <%= f.label :payment_method_credit_card, "クレジットカード" %>
+      <%= f.radio_button :method_of_payment, OrderHistory.method_of_payments.key(0), checked: true %>
+      <%= f.label :method_of_payment_credit_card, OrderHistory.method_of_payments_i18n[:credit_card] %>
     </div>
     <div class="row">
-      <%= f.radio_button :method_of_payment, "transfer" %>
-      <%= f.label :payment_method_transfer, "銀行振込" %>
+      <%= f.radio_button :method_of_payment, OrderHistory.method_of_payments.key(1) %>
+      <%= f.label :method_of_payment_transfer, OrderHistory.method_of_payments_i18n[:transfer]%>
     </div>
 
     <div class="row">
