[Add]comfirm画面にhidden_filedの実装,createアクションにsaveを実装(どちらも正確さは非検証)

--- a/app/views/public/order_histories/confirm.html.erb
+++ b/app/views/public/order_histories/confirm.html.erb
@@ -76,8 +76,15 @@
     <div class="row justify-content-center">
       <div class="col-lg-3">
         <%= form_with model: @order_history, public_order_histories_create_path, method: :post do |f| %>
-        <!--ここにhidden_fieldを使って、上記の表示されている内容を送信するフォームを作成-->
-          <% f.submit "注文を確定する", class: "btn btn-success"%>
+          <%= f.hidden_field :name, :value=> item.name %>
+          <%= f.hidden_field :add_tax_price, :value=> item.add_tax_price %>
+          <%= f.hidden_field :amount, :value=> item.amount %>
+          <%= f.hidden_field :subtotal, :value=> @cart_item.subtotal %>
+          <%= f.hidden_field :total, :value=> @total %>
+          <%= f.hidden_field :billing_amount, :value=> @total+@postage %>
+          <%= f.hidden_field :method_of_payment, :value=> method_of_payment_i18n %>
+          <%= f.hidden_field :address, :value=> @customer.address %>
+          <%= f.submit "注文を確定する", class: "btn btn-success"%>
         <% end %>
       </div>
     </div>
