--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,1 +1,37 @@
-<h1>ここはadmin topページ</h1>
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3 my-3">
+        <h4>注文履歴一覧</h4>
+      </div>
+    </div>
+
+    <div class="row jstifuy-content-center">
+      <div class="col-lg-9">
+        <table width="100%">
+          <thead>
+            <th class="border" width="25%">購入日時</th>
+            <th class="border" width="25%">購入者</th>
+            <th class="border" width="50%">注文個数</th>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="border" width="25%">
+                
+              </td>
+              <td class="border" width="25%">
+                <%= link_to admin_customers_path do %>
+                
+                <% end %>
+              </td>
+              <td class="border" width="50%">
+                
+              </td>
+            <tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    
+  </div>
+</main>
