--- a/app/views/public/order_histories/index.html.erb
+++ b/app/views/public/order_histories/index.html.erb
@@ -1,1 +1,45 @@
-<h1>ここは会員側の注文一覧ページです</h1>
+<main>
+  <div class="container">
+    <div class="row my-5">
+      <div class="col-lg-3">
+        <h4>注文履歴一覧</h4>
+      </div>
+    </div>
+
+    <div class="row mt-3">
+      <div class="col-lg-10 jstifuy-content-center">
+        <table width="100%">
+          <thead>
+            <th class="border"  width="20%">注文日</th>
+            <th class="border"  width="40%">配送先</th>
+            <th class="border"  width="15%">注文商品</th>
+            <th class="border"  width="10%">支払金額</th>
+            <th class="border"  width="15%">注文詳細</th>
+          </thead>
+          <tbody>
+
+              <tr>
+                <td class="border"  width="20%">
+                  
+                </td>
+                <td class="border"  width="40%">
+                  配送先
+                </td>
+                <td class="border"  width="15%">
+                  注文商品
+                </td>
+                <td class="border"  width="10%">
+                  支払金額
+                </td>
+                <td class="border"  width="15%">
+                  注文詳細
+                </td>
+              </tr>
+
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+  </div>
+</main>
