--- a/app/views/public/order_histories/index.html.erb
+++ b/app/views/public/order_histories/index.html.erb
@@ -10,32 +10,36 @@
       <div class="col-lg-10 jstifuy-content-center">
         <table width="100%">
           <thead>
-            <th class="border"  width="20%">注文日</th>
-            <th class="border"  width="40%">配送先</th>
-            <th class="border"  width="15%">注文商品</th>
-            <th class="border"  width="10%">支払金額</th>
-            <th class="border"  width="15%">注文詳細</th>
+            <th class="border p-2"  width="20%">注文日</th>
+            <th class="border p-2"  width="40%">配送先</th>
+            <th class="border p-2"  width="15%">注文商品</th>
+            <th class="border p-2"  width="10%">支払金額</th>
+            <th class="border p-2"  width="15%">注文詳細</th>
           </thead>
           <tbody>
-
+            <% @order_history.each do |order|%>
               <tr>
-                <td class="border"  width="20%">
-                  
+                <td class="border p-3"  width="20%">
+                  <%= order.created_at %>
                 </td>
-                <td class="border"  width="40%">
-                  配送先
+                <td class="border p-3"  width="40%">
+                  <%= order.postal_code %></br>
+                  <%= order.address %></br>
+                  <%= order.address_name %>
                 </td>
-                <td class="border"  width="15%">
-                  注文商品
+                <td class="border p-3"  width="15%">
+                  <% order.order_details.each do |detail|%>
+                    <p><%= detail.item.name %></p>
+                  <% end%>
                 </td>
-                <td class="border"  width="10%">
-                  支払金額
+                <td class="border p-3"  width="10%">
+                  <%= order.payment_amount %>円
                 </td>
-                <td class="border"  width="15%">
-                  注文詳細
+                <td class="border p-3"  width="15%">
+                  <%= link_to ""%>
                 </td>
               </tr>
-
+            <% end %>
           </tbody>
         </table>
       </div>
