--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,1 +1,7 @@
-<h1>ここは注文詳細（一覧画面）</h1>
+<main>
+  <div class="row jstifuy-content-center">
+    <div class="col-lg-3 my-4">
+      <h4>注文履歴詳細</h4>
+    </div>
+  </div>
+</main>
