--- a/app/views/public/order_histories/index.html.erb
+++ b/app/views/public/order_histories/index.html.erb
@@ -20,7 +20,7 @@
             <% @order_history.each do |order|%>
               <tr>
                 <td class="border p-2"  width="20%">
-                  <%= order.created_at %>
+                  <%= order.created_at.strftime('%Y/%m/%d') %>
                 </td>
                 <td class="border p-2"  width="40%">
                   <%= order.postal_code %></br>
