[Add]管理者側、注文履歴一覧ページ、注文詳細ページの9割完成(残りは、一覧での商品の数、詳細での名前部分をフルネームで表示する部分が主な作業)

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -10,28 +10,30 @@
       <div class="col-lg-9">
         <table width="100%">
           <thead>
-            <th class="border" width="25%">購入日時</th>
-            <th class="border" width="25%">購入者</th>
-            <th class="border" width="50%">注文個数</th>
+            <th class="border-top border-bottom" width="25%">購入日時</th>
+            <th class="border-top border-bottom" width="25%">購入者</th>
+            <th class="border-top border-bottom" width="50%">注文個数</th>
           </thead>
+          <% @order_history.each do |order| %>
           <tbody>
             <tr>
-              <td class="border" width="25%">
-                
-              </td>
-              <td class="border" width="25%">
-                <%= link_to admin_customers_path do %>
-                
+              <td class="border-bottom" width="25%">
+                <%= link_to admin_orders_show_path(order.id) do %>
+                  <%= order.created_at %>
                 <% end %>
               </td>
-              <td class="border" width="50%">
-                
+              <td class="border-bottom" width="25%">
+                <%= order.address_name %>
+              </td>
+              <td class="border-bottom" width="50%">
+
               </td>
             <tr>
           </tbody>
+          <% end %>
         </table>
       </div>
     </div>
-    
+
   </div>
 </main>
