--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
                   <%= link_to "会員一覧", admin_customers_path, class:"m-2 text-light" %>
                 </li>
                 <li>
-                <%= link_to "注文一覧", admin_homes_top_path, class:"m-2 text-light" %>
+                <%= link_to "注文履歴一覧", admin_homes_top_path, class:"m-2 text-light" %>
                 </li>
                 <li>
                   <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class:"m-2 text-light" %>
