--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -17,21 +17,27 @@
           <% @order_history.each do |order| %>
           <tbody>
             <tr>
-              <td class="border-bottom" width="25%">
+              <td class="border-bottom p-1" width="25%">
                 <%= link_to admin_orders_show_path(order.id) do %>
                   <%= order.created_at %>
                 <% end %>
               </td>
-              <td class="border-bottom" width="25%">
+              <td class="border-bottom p-1" width="25%">
                 <%= order.address_name %>
               </td>
-              <td class="border-bottom" width="50%">
-
+              <td class="border-bottom p-1" width="50%">
+                <%= order.order_details.quantity.count %>
               </td>
             <tr>
           </tbody>
           <% end %>
         </table>
+      </div>
+    </div>
+
+    <div class="row mt-2 jstifuy-content-center">
+      <div class="col-lg-4">
+        <%= paginate @order_history %>
       </div>
     </div>
 
