[Add]ヘッダー部分にロゴの追加

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -26,7 +26,7 @@
                 <%= order.address_name %>
               </td>
               <td class="border-bottom p-1" width="50%">
-                <%= order.order_details.quantity.count %>
+                <!--<= order.order_details.quantity.count %>-->
               </td>
             <tr>
           </tbody>
