--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -14,32 +14,32 @@
       <div class="col jstifuy-content-center">
         <table width="100%">
           <thead>
-            <th class="border"  width="40%">商品名</th>
-            <th class="border"  width="15%">単価(税込)</th>
-            <th class="border"  width="15%">数量</th>
-            <th class="border"  width="15%">小計</th>
-            <th class="border"  width="15%"></th>
+            <th class="border p-2"  width="40%">商品名</th>
+            <th class="border p-2"  width="15%">単価(税込)</th>
+            <th class="border p-2"  width="15%">数量</th>
+            <th class="border p-2"  width="15%">小計</th>
+            <th class="border p-2"  width="15%"></th>
           </thead>
           <tbody>
             <% @cart_items.each do |cart_item| %>
               <tr>
-                <td class="border"  width="40%">
+                <td class="border p-2 text-center"  width="40%">
                   <%= cart_item.item.name %>
                 </td>
-                <td class="border"  width="15%">
+                <td class="border p-2"  width="15%">
                   <%= cart_item.item.add_tax_price %>
                 </td>
-                <td class="border"  width="15%">
+                <td class="border p-2"  width="15%">
                   <%= form_with model: cart_item, url: public_cart_items_update_path(cart_item.id), method: :patch do |f|%>
                     <%= f.select :amount, [['1個',1], ['２個',2], ['３個',3], ['４個',4], ['５個',5], ['６個',6], ['７個',7], ['８個',8] ,['９個',9]] %>
                     <%= f.submit "変更", class: "btn btn-success" %>
                   <% end %>
                 </td>
-                <td class="border"  width="15%">
+                <td class="border p-2"  width="15%">
                   <%= cart_item.subtotal%>
                   <% @total += cart_item.subtotal %>
                 </td>
-                <td class="border"  width="15%">
+                <td class="border p-2"  width="15%">
                   <%= link_to "削除する", public_cart_items_destroy_path(cart_item.id), method: :delete,
                     "data-confirm" => "本当に削除しますか？", class: "btn btn-danger"%>
                 </td>
