--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,6 +1,6 @@
 <main>
   <div class="container">
-    <div class="row my-2">
+    <div class="row my-4">
       <div>
         <h4>会員情報編集</h4>
       </div>
@@ -9,70 +9,70 @@
   <%= form_with model: @customer, url: public_customers_information_path, method: :patch do |f| %>
 
     <div class="row mb-1">
-      <div class="col">
-        <%= f.label :名前 %>
+      <div class="col-lg-2">
+        <%= f.label :氏名 %>
       </div>
-      <div class="col">
-        <p>（姓）</p><%= f.text_field :last_name, autocomplete: "last_name" %>
+      <div class="col-lg-2 mr-3">
+        <%= f.text_field :last_name, autocomplete: "last_name" %>
       </div>
-      <div class="col">
-        <p>（名）</p><%= f.text_field :first_name, autocomplete: "first_name" %>
+      <div class="col-lg-2">
+        <%= f.text_field :first_name, autocomplete: "first_name" %>
       </div>
     </div>
 
     <div class="row mb-1">
-      <div class="col">
+      <div class="col-lg-2">
         <%= f.label :フリガナ %>
       </div>
-      <div class="col">
-        <p>（セイ）</p><%= f.text_field :last_name_kana, autocomplete: "last_name_kana" %>
+      <div class="col-lg-2 mr-3">
+        <%= f.text_field :last_name_kana, autocomplete: "last_name_kana" %>
       </div>
-      <div class="col">
-        <p>（メイ）</p><%= f.text_field :first_name_kana, autocomplete: "first_name_kana" %>
+      <div class="col-lg-2">
+        <%= f.text_field :first_name_kana, autocomplete: "first_name_kana" %>
       </div>
     </div>
 
     <div class="row mb-1">
-      <div class="col">
+      <div class="col-lg-2">
         <%= f.label :郵便番号 %>
       </div>
-      <div class="col">
+      <div class="col-lg-2">
         <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code" %>
       </div>
     </div>
 
     <div class="row mb-1">
-      <div class="col">
+      <div class="col-lg-2">
         <%= f.label :住所 %>
       </div>
       <div class="col-lg-6">
-        <%= f.text_field :address, autofocus: true, autocomplete: "address" %>
+        <%= f.text_area :address, autofocus: true, autocomplete: "address" %>
       </div>
     </div>
 
     <div class="row mb-1">
-      <div class="col">
+      <div class="col-lg-2">
         <%= f.label :電話番号 %>
       </div>
-      <div class="col">
+      <div class="col-lg-2">
         <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number" %>
       </div>
     </div>
 
     <div class="row mb-1">
-      <div class="col">
+      <div class="col-lg-2">
         <%= f.label :メールアドレス %>
       </div>
-      <div class="col">
+      <div class="col-lg-2">
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-lg-4 mr-3" >
-        <%= f.submit "編集内容を保存" %>
+    <div class="row jstifuy-content-center">
+      <div class="col-lg-5 mr-3" >
+        <%= f.submit "編集内容を保存", class: "btn btn-success" %>
       </div>
-      <div class="col-lg-2" >
+      <div class="col-lg-4" >
         <%= link_to "退会する", public_customers_confirm_withdraw_path, class: "btn btn-sm btn-danger" %>
       </div>
     </div>
