--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -14,62 +14,62 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-2 border border-dark">
+      <div class="col-lg-2 p-2 border border-dark">
         <text>氏名</text>
       </div>
-      <div class="col-lg-4 border border-dark">
+      <div class="col-lg-4 p-2 border border-dark">
         <%= @customer.last_name %>
         <%= @customer.first_name %>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-lg-2 border border-dark">
+      <div class="col-lg-2 p-2 border border-dark">
         <text>カナ</text>
       </div>
-      <div class="col-lg-4 border border-dark">
+      <div class="col-lg-4 p-2 border border-dark">
         <%= @customer.last_name_kana %>
         <%= @customer.first_name_kana %>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-lg-2 border border-dark">
+      <div class="col-lg-2 p-2 border border-dark">
         <text>郵便番号</text>
       </div>
-      <div class="col-lg-4 border border-dark">
+      <div class="col-lg-4 p-2 border border-dark">
         <%= @customer.postal_code%>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-lg-2 border border-dark">
+      <div class="col-lg-2 p-2 border border-dark">
         <text>住所</text>
       </div>
-      <div class="col-lg-4 border border-dark">
+      <div class="col-lg-4 p-2 border border-dark">
         <%= @customer.address %>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-lg-2 border border-dark">
+      <div class="col-lg-2 p-2 border border-dark">
         <text>電話番号</text>
       </div>
-      <div class="col-lg-4 border border-dark">
+      <div class="col-lg-4 p-2 border border-dark">
         <%= @customer.telephone_number%>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-lg-2 border border-dark">
+      <div class="col-lg-2 p-2 border border-dark">
         <text>メールアドレス</text>
       </div>
-      <div class="col-lg-4 border border-dark">
+      <div class="col-lg-4 p-2 border border-dark">
         <%= @customer.email %>
       </div>
     </div>
 
-    <div class="row mt-3">
+    <div class="row mt-5">
       <div class="col-lg-2">
         <p>注文一覧</p>
       </div>
