--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,6 +1,6 @@
 <main>
   <div class="container">
-    <div class="row mt-4">
+    <div class="row my-4">
       <div class="col-lg-4 text-right">
         <h3>商品一覧</h3>
       </div>
