--- a/app/views/public/order_histories/confirm.html.erb
+++ b/app/views/public/order_histories/confirm.html.erb
@@ -69,7 +69,7 @@
       </div>
       <div class="col-lg-8">
         <p>〒<%= @customer.postal_code %> <%= @customer.address %></br>
-        <%= @customer.last_name %><%= @customer.first_name %><p>
+        <%= @customer.full_name %><p>
       </div>
     </div>
 
@@ -79,7 +79,7 @@
         　<%= f.hidden_field :customer_id, :value=> @customer.id %>
         　<%= f.hidden_field :postal_code, :value=> @customer.postal_code %>
         　<%= f.hidden_field :address, :value=> @customer.address %>
-        　<%= f.hidden_field :address_name, :value=> @customer.last_name %>
+        　<%= f.hidden_field :address_name, :value=> @customer.full_name %>
         　<%= f.hidden_field :postage, :value=> @postage %>
           <%= f.hidden_field :payment_amount, :value=> @total+@postage %>
           <%= f.hidden_field :method_of_payment %>
