--- a/app/views/public/order_histories/new.html.erb
+++ b/app/views/public/order_histories/new.html.erb
@@ -26,7 +26,7 @@
     <div class="row">
       <div class="col-lg-9">
         <p>〒<%= @customer.postal_code %> <%= @customer.address %></br>
-        <%= @customer.last_name %><%= @customer.first_name %><p>
+        <%= @customer.full_name %><p>
       </div>
     </div>
 
