--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -65,7 +65,7 @@
           </tr>
           <tr>
             <td class="p-2" width="20%"><strong>請求金額合計</strong></td>
-            <td class="p-2" width="40%"><%=  @order_history.payment_amount %>円</td>
+            <td class="p-2" width="40%"><strong><%=  @order_history.payment_amount %>円</strong></td>
           </tr>
         </table>
       </div>
