--- a/app/views/public/order_histories/index.html.erb
+++ b/app/views/public/order_histories/index.html.erb
@@ -45,5 +45,10 @@
       </div>
     </div>
 
+    <div class="row mt-2">
+      <div class="col-lg-4">
+        <%= paginate @order_history %>
+      </div>
+    </div>
   </div>
 </main>
