--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -23,7 +23,7 @@
 
         <div class="row">
           <div class="col-lg-3">
-            <p>商品説明文</p>
+            <p>商品説明</p>
           </div>
           <div class="col-lg-4">
             <%= @item.introduction %>
@@ -33,11 +33,11 @@
         <div class="row">
           <div class="col-lg-3">
             <p>税込価格<br>
-              （税抜価格）
+              (税抜価格)
             </p>
           </div>
           <div class="col-lg-4">
-            <p>(<%= @item.price %>)円</p>
+            <p><%= @item.add_tax_price %>(<%= @item.price %>)円</p>
           </div>
         </div>
 
