--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -10,49 +10,49 @@
 
     <%= render "public/shared/error_messages", resource: resource %>
     <div class="row mb-1">
-      <div class="col">
+      <div class="col-lg-3">
         <%= f.label :名前 %>
       </div>
-      <div class="col">
+      <div class="col-lg-3">
         <p>（姓）<%= f.text_field :last_name, autocomplete: "last_name" %><p>
       </div>
-      <div class="col">
+      <div class="col-lg-3">
         <p>（名）<%= f.text_field :first_name, autocomplete: "first_name" %></p>
       </div>
     </div>
 
     <div class="row mb-1">
-      <div class="col">
+      <div class="col-lg-3">
         <%= f.label :フリガナ %>
       </div>
-      <div class="col">
+      <div class="col-lg-3">
         <p>（セイ）<%= f.text_field :last_name_kana, autocomplete: "last_name_kana" %></p>
       </div>
-      <div class="col">
+      <div class="col-lg-3">
         <p>（メイ）<%= f.text_field :first_name_kana, autocomplete: "first_name_kana" %></p>
       </div>
     </div>
 
     <div class="row mb-1">
-      <div class="col">
+      <div class="col-lg-3">
         <%= f.label :メールアドレス %>
       </div>
-      <div class="col">
+      <div class="col-lg-3">
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
       </div>
     </div>
 
     <div class="row mb-1">
-      <div class="col">
+      <div class="col-lg-3">
         <%= f.label :郵便番号（ハイフンなし） %>
       </div>
-      <div class="col">
+      <div class="col-lg-3">
         <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code" %>
       </div>
     </div>
 
     <div class="row mb-1">
-      <div class="col">
+      <div class="col-lg-3">
         <%= f.label :住所 %>
       </div>
       <div class="col-lg-6">
@@ -61,38 +61,38 @@
     </div>
 
     <div class="row mb-1">
-      <div class="col">
+      <div class="col-lg-3">
         <%= f.label :電話番号（ハイフンなし） %>
       </div>
-      <div class="col">
+      <div class="col-lg-3">
         <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number" %>
       </div>
     </div>
 
     <div class="row mb-1">
-      <div class="col">
+      <div class="col-lg-3">
         <%= f.label :パスワード（６文字以上） %>
       <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <em>(<%= @minimum_password_length %>characters minimum)</em>
       <% end %>
       </div>
-      <div class="col">
+      <div class="col-lg-3">
         <%= f.password_field :password, autocomplete: "new-password" %>
       </div>
     </div>
 
    <div class="row mb-2">
-      <div class="col">
+      <div class="col-lg-3">
         <%= f.label :パスワード（確認用） %>
       </div>
-      <div class="col">
+      <div class="col-lg-3">
         <%= f.password_field :password, autocomplete: "new-password" %>
       </div>
     </div>
 
-    <div class="row mb-1 justify-content-center">
-      <div class="col-lg-2" >
-        <%= f.submit "新規登録" %>
+    <div class="row my-3 justify-content-center">
+      <div class="col-lg-3">
+        <%= f.submit "新規登録", class: "btn btn-success" %>
       </div>
     </div>
   <% end %>
