[fix]テスト項目の実行後の修正一旦完了

--- a/app/views/public/customers/confirm.html.erb
+++ b/app/views/public/customers/confirm.html.erb
@@ -17,7 +17,7 @@
         <%= link_to "退会しない", public_customers_mypage_path(@customer), class: "btn btn-primary" %>
       </div>
       <div class="col-lg-2 justify-content-center">
-        <%= link_to "退会する", public_customers_withdraw_path, method: :patch, data: { confilm: "本当に退会しますか？" }, class: "btn btn-danger" %>
+        <%= link_to "退会する", public_customers_withdraw_path, method: :patch, "data-confirm" => "本当に削除しますか？", class: "btn btn-danger" %>
       </div>
     </div>
   </div>
