--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -68,7 +68,9 @@
 
     <div class="row justify-content-center mt-4">
       <div class="col-lg-3">
-        <%= link_to "情報入力に進む", public_order_histories_new_path, class: "btn btn-success" %>
+        <% if @cart_items.any? %>
+          <%= link_to "情報入力に進む", public_order_histories_new_path, class: "btn btn-success" %>
+        <% end %>
       </div>
     </div>
 
